
## 0.3.0 2018-10-15

Now uses the ODrive `preroll` branch to allow use of encoders with no index. 
Set ROS param `use_preroll` to False for old behaviour.

## 0.2.1 2018-10-03

Bug in startup sequence (calibrated twice)

## 0.2.0 2018-09-25

Various services for connecting, calibrating, engage/release, etc.
Parameters to set whether connection and calibration happens on startup.

## 0.1.2 2018-09-12

Abstracted left/right motors up into the node, so axis0 and axis1 can be assigned to either.
Fixed dumb bug in cleaning up node class.

## 0.1.1 2018-09-10

- Switched to modified BSD license from MIT, same as ROS proper.

## 0.1.0 2018-09-07

- Turned into a proper ROS package: just need to checkout repository into your workspace's src/ dir.

## 2018-07-31

- Initial commit