@@ -4,6 +4,11 @@
 Now uses the ODrive `preroll` branch to allow use of encoders with no index. 
 Set ROS param `use_preroll` to False for old behaviour.
 
+Added diff-drive odometry calculation and publishing to both ROS topic and tf
+Added current calculation
+
+Pulls encoder counts from driver
+
 ## 0.2.1 2018-10-03
 
 Bug in startup sequence (calibrated twice)
